--- a/websites/demo/style.css
+++ b/websites/demo/style.css
@@ -2,6 +2,7 @@ body {
   display: grid;
   place-items: center;
   height: 100vh;
-  margin: 0;
+  margin: 0 auto;
   font-family: sans-serif;
+  width: 50%;
 }
